Fixed styling issue where scroll bars were always visibile

--- a/robotpy_websim/html/src/assets/scss/app.scss
+++ b/robotpy_websim/html/src/assets/scss/app.scss
@@ -1,7 +1,7 @@
 @import './select2-bootstrap4.min.css';
 
 body .lm_content {
-  overflow: scroll;
+  overflow: auto;
 }
 
 .golden-layout {
